crates/ringkernel-derive/tests/compile_fail/control_block_state_without_copy.rs
/// ControlBlockState requires Copy. A struct containing a Vec cannot be Copy.
use ringkernel_derive::ControlBlockState;

#[derive(ControlBlockState, Default, Clone, Debug)]
#[repr(C)]
struct NotCopyableState {
    data: Vec<u8>,
}

fn main() {}
